# http-server

./: .gitignore  CMakeLists.txt  README.md  client.c  config.cfg  ncurses.c  server.c  shared.h
http_protocol/: config.c  config.h  http.c  http.h  http_request.h  http_response.h  process_pool.c  process_pool.h  thread_pool.c  thread_pool.h
libs/: str_map.c  str_map.h
ncurses/: ncurses.c  ncurses.h  ncurses_form.c  ncurses_form.h  ncurses_menu.c  ncurses_menu.h  ncurses_panel.c  ncurses_panel.h  ncurses_shared.c  ncurses_shared.h
server_directory/: 404.html  dogs.html  index.html
